--- a/contato.html
+++ b/contato.html
@@ -3,31 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/styles/style.css">
     <title>Contato</title>
 </head>
-<body>
-    <form>
-        <ul>
+<body class="alinharCentro">
+    <div>   
+        <ul class="menu">
             <li>
-                <a href="../fundamentos-web/index.html">Home</a>
+                <a href="index.html">Home</a>
             </li>
             <li>
                 <a href="">Contato</a>
             </li>
         </ul>
-
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome">
-        <br>
-        <br>
-        <label for="email">E-mail:</label>
-        <input type="email" id="email">
-        <br>
-        <br>
-        <label for="assunto">Assunto:</label>
-        <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
-
-    </form>
-    
+    </div> 
+    <div class="container">   
+            <form>
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome">
+                <br>
+                <br>
+                <label for="email">E-mail:</label>
+                <input type="email" id="email">
+                <br>
+                <br>
+                <label for="assunto">Assunto:</label>
+                <textarea name="assunto" id="assunto" cols="60" rows="5">Digite sua mensagem neste campo</textarea>
+                
+                <div>
+                    <a href="#"  class="button">Enviar</a>
+                </div>
+            </form>
+    </div>
 </body>
 </html>
