--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="assets/styles/style.css">
     <title>Document</title>
 </head>
-<body class="alinharCentro">
+<body class="alinharCentro body-back">
 
     <ul id="menu">
         <li>
